--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -3,19 +3,19 @@
   "projects": [
     {
       "title": "Sir Rosevelt Take Your Love Away",
-      "copy": ["Sir Rosevelt", "Take Your Love Away"],
+      "copy": {"title": "Sir Rosevelt Take Your Love Away", "subtitle": "A Southern Reel Production"},
       "video": "https://player.vimeo.com/video/207580033",
       "image": "slide-01.jpg"
     },
     {
       "title": "Placeholder One",
-      "copy": ["Placeholder", "One"],
+      "copy": {"title":"Sir Rosevelt Take Your Love Away", "subtitle": "A Southern Reel Production"},
       "video": "https://player.vimeo.com/video/207580033",
       "image": "slide-02.jpg"
     },
     {
       "title": "Placeholder Two",
-      "copy": ["Placeholder", "Two"],
+      "copy": {"title":"Sir Rosevelt Take Your Love Away", "subtitle": "A Southern Reel Production"},
       "video": "https://player.vimeo.com/video/207580033",
       "image": "slide-03.jpg"
     }
