Adds two new videos.

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -60,6 +60,24 @@
       },
       "video": "219896080",
       "image": "tomorrow-never-comes.jpg"
+    },
+    {
+      "title": "<p>Mazda</p><p class='bold'>Souls</p>",
+      "copy": {
+        "title": "Mazda <span class='bold'>Souls</span>",
+        "subtitle": ""
+      },
+      "video": "220407100",
+      "image": "mazda.png"
+    },
+    {
+      "title": "<p>Peujot Avenue</p><p class='bold'>Beijing</p>",
+      "copy": {
+        "title": "Peujot Avenue <span class='bold'>Beijing</span>",
+        "subtitle": ""
+      },
+      "video": "220413524",
+      "image": "peugot-beijing.png"
     }
   ],
   "about": {
