Updates capabilities list.

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -83,10 +83,15 @@
   "about": {
     "capabilities": [
       "Film Production",
+      "Creative Design",
       "Photography",
-      "Graphic Design",
       "Content Strategy",
-      "Social Media"
+      "Web Development",
+      "Branding",
+      "Social Media",
+      "Public Relations",
+      "Communications",
+      "Business Strategy"
     ],
     "content": [
       {
