Updates job titles for Alyssa and Jessica.

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -190,11 +190,11 @@
     },
     {
       "name": "Alyssa Goodman",
-      "title": "Communications Specialist"
+      "title": "Communications Manager"
     },
     {
       "name": "Jessica Robinson",
-      "title": "Digital Content Strategist"
+      "title": "Digital Content Manager"
     },
     {
       "name": "AJ Parker",
